src/objects/DocumentJunction__c.object
<CustomObject>
    <fields>
        <fullName>CAPA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CAPA</label>
        <referenceTo>CAPA__c</referenceTo>
        <relationshipLabel>DocumentJunctions</relationshipLabel>
        <relationshipName>DocumentJunctions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Change_Management__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Change Management</label>
        <referenceTo>Change_Management__c</referenceTo>
        <relationshipLabel>DocumentJunctions</relationshipLabel>
        <relationshipName>DocumentJunctions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Child_Owner__c</fullName>
        <formula>IF( NOT(ISBLANK(DocumentChild__c)) , DocumentChild__r.Owner:User.FirstName+&apos; &apos;+ DocumentChild__r.Owner:User.LastName , &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Child Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Child_Revision__c</fullName>
        <formula>IF( NOT( ISBLANK( DocumentChild__c ) ) ,  DocumentChild__r.Current_Rev__c , &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Child Revision</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Child_Status__c</fullName>
        <formula>IF(NOT(ISBLANK(DocumentChild__c)) , TEXT(DocumentChild__r.Status__c),&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Child Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Child_Title__c</fullName>
        <formula>IF( NOT( ISBLANK(  DocumentChild__c  ) ) , DocumentChild__r.Title__c , &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Child Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Rev__c</fullName>
        <formula>IF( NOT( ISBLANK( DocumentParent__c ) ) , DocumentParent__r.Current_Rev__c , &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Rev</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DocumentChild__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DocumentChild</label>
        <referenceTo>Document_Profile__c</referenceTo>
        <relationshipLabel>DocumentJunctions</relationshipLabel>
        <relationshipName>DocumentJunctions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DocumentParent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DocumentParent</label>
        <referenceTo>Document_Profile__c</referenceTo>
        <relationshipLabel>DocumentJunctions (DocumentParent)</relationshipLabel>
        <relationshipName>DocumentJunctions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NC_Type__c</fullName>
        <formula>IF(NOT(ISBLANK( Non_Conformance__c  )),  TEXT(Non_Conformance__r.NC_Type__c) , &apos;&apos;  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NC Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Non_Conformance__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Non-Conformance</label>
        <referenceTo>Non_Conformance__c</referenceTo>
        <relationshipLabel>DocumentJunctions</relationshipLabel>
        <relationshipName>DocumentJunctions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <formula>IF(NOT(ISBLANK( Non_Conformance__c)),   Non_Conformance__r.Owner:User.FirstName+&apos; &apos;+ Non_Conformance__r.Owner:User.LastName    ,   CAPA__r.Owner:User.FirstName+&apos; &apos;+ CAPA__r.Owner:User.LastName  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Owner__c</fullName>
        <formula>IF( NOT(ISBLANK(DocumentParent__c)) , DocumentParent__r.Owner:User.FirstName+&apos; &apos;+ DocumentParent__r.Owner:User.LastName ,&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Status__c</fullName>
        <formula>IF(NOT(ISBLANK(DocumentParent__c)) , TEXT(DocumentParent__r.Status__c),&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Title__c</fullName>
        <formula>IF( NOT( ISBLANK( DocumentParent__c ) ) , DocumentParent__r.Title__c , &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RelationWithChild__c</fullName>
        <formula>IF( RelationWithParent__c== &apos;Master&apos;, &apos;Sub Document&apos;,  IF(RelationWithParent__c == &apos;Sub Document&apos;, &apos;Master&apos;,  IF(RelationWithParent__c == &apos;Related&apos;, &apos;Related&apos; , &apos;&apos;) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RelationWithChild</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RelationWithParent__c</fullName>
        <label>RelationWithParent</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <formula>IF( NOT( ISBLANK( Non_Conformance__c ) ) ,  TEXT(Non_Conformance__r.NC_Source__c) ,  IF(NOT( ISBLANK(  CAPA__c ) ),  TEXT( CAPA__r.CAPA_Source__c ),&apos;&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Source</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>IF(NOT(ISBLANK( Non_Conformance__c)),  TEXT(Non_Conformance__r.NC_Status__c) , TEXT( CAPA__r.CAPA_Status__c ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <formula>IF( NOT( ISBLANK( CAPA__c ) ) ,  CAPA__r.Title__c , &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Title</label>
        <type>Text</type>
    </fields>
    <label>DocumentJunction</label>
    <nameField>
        <displayFormat>DJ-{00000}</displayFormat>
        <label>DocumentJunction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DocumentJunctions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>